style.css
html {
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
}

body {
    margin: 0;
}

main {
    display: block;
}
img {
    border-style: none;
}



html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}
/* ===================================================================
 * # BASE SETUP
 *
 *
 * ------------------------------------------------------------------- */
html,
body {
    height: 100%;
    margin: 0;
    overflow: hidden;
    /* Prevent scrolling */
}

img {
    max-width: 100%;
    height: auto;
}
/* ===================================================================
 * # INTRO
 *
 *
 * ------------------------------------------------------------------- */
.s-intro {
    background-color: black;
    width: 100%;
    height: calc(var(--vh) * 100);
    /* Ensure the section covers the full viewport height */
    overflow: hidden;
    /* Prevent scrolling within the section */
    position: relative;
}

/* --------------------------------------------------------------------
 * ## intro background
 * -------------------------------------------------------------------- */
.s-intro__bg {
    background-color: black;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url(images/bg-large.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    /* Ensure the image scales to cover the viewport */
}

.s-intro__bg::before {
    display: block;
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    opacity: .2;
}

.s-intro__bg::after {
    display: block;
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    opacity: .8;
}
@media (max-width: 607px) {
    .s-intro__bg {
        background-image: url(images/bg-small.jpg);
    }
}

